--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@ runtime: php74 # Replace with php74 to use PHP 7.4
 handlers:
 # Serve a directory as a static resource.
 - url: stylesheet
-  static_dir: stylesheet
+  static_dir: style.css
 
 
 # Serve images as static resources.
