--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,10 @@
   "name":"bellesmaids/composer",
   "description": "bellesmaids project",
 
-      "require": {
-          "vendor/package": "1.3.2",
-          "vendor/package2": "1.*",
-          "vendor/package3": "^2.0.3"
-      },
+"require": {
+    "monolog/monolog": "2.0.*"
+},
+},
   "autoload": {
     "files": []
   }
