--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name":"bellesmaids/composer",
-  "description": "bellesmaids project"
+  "description": "bellesmaids project",
 
 "require": {
     "monolog/monolog": "2.0.*"
