--- a/app.yaml
+++ b/app.yaml
@@ -1,22 +1,22 @@
-runtime: php74 # Replace with php74 to use PHP 7.4
+#runtime: php74 # Replace with php74 to use PHP 7.4
 
-handlers:
+#handlers:
 # Serve a directory as a static resource.
 
-- url: /stylesheet
-  static_dir: stylesheet
+#- url: /stylesheet
+#  static_dir: stylesheet
 
-- url: /images
-  static_dir: images
+##- url: /images
+#  static_dir: images
 
-- url: /index.php
-  static_dir: index.php
+#- url: /index.php
+#  static_dir: index.php
 
 # Serve images as static resources.
-- url: /(.+\.(gif|png|jpg))$
-  static_files: \1
-  upload: .+\.(gif|png|jpg)$
+#- url: /(.+\.(gif|png|jpg))$
+#  static_files: \1
+#  upload: .+\.(gif|png|jpg)$
 
 # Serve your app through a front controller at index.php or public/index.php.
-- url: /.*
-  script: auto
+#- url: /.*
+#  script: auto
